--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
