--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
+# Port number
 PORT=3000
+
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+DATABASE_URL="mongodb://janedoe:mypassword@localhost:5432/mydb?schema=sample"
