--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "prettier": "prettier --check src/**/*.ts",
-    "prettier:fix": "prettier --write src/**/*.ts"
+    "prettier:fix": "prettier --write src/**/*.ts",
+    "generate": "npx prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^4.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
