chore: Add JWT_SECRET sample to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Port number
 PORT=3000
 
+#JWT secret
+JWT_SECRET=thisisasamplesecret
+
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DATABASE_URL="mongodb://janedoe:mypassword@localhost:5432/mydb?schema=sample"
