--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,10 @@ PORT=3000
 #JWT secret
 JWT_SECRET=thisisasamplesecret
 
+#Google auth
+GOOGLE_CLIENT_ID=sample_client_id
+GOOGLE_CLIENT_SECRET=sample_client_secret
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DATABASE_URL="mongodb://janedoe:mypassword@localhost:5432/mydb?schema=sample"
