chore: Add JWT token expiration times to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,19 @@
 # Port number
 PORT=3000
 
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+DATABASE_URL="mongodb://janedoe:mypassword@localhost:5432/mydb?schema=sample"
+
 # JWT secret
 JWT_SECRET=thisisasamplesecret
+JWT_ACCESS_EXPIRATION_MINUTES=30
+JWT_REFRESH_EXPIRATION_DAYS=30
+JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
+JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 
 # Google auth
 GOOGLE_CLIENT_ID=sample_client_id
 GOOGLE_CLIENT_SECRET=sample_client_secret
-GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
 # SMTP server
 SMTP_HOST=email-server-host
@@ -16,5 +22,3 @@ SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
 EMAIL_FROM=no-reply@app.com
 
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DATABASE_URL="mongodb://janedoe:mypassword@localhost:5432/mydb?schema=sample"
