--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.1.5",
     "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
