--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "ISC",
   "keywords": [],
   "scripts": {
-    "dev": "set NODE_ENV=development && nodemon src/index.ts",
-    "start": "set NODE_ENV=production && node dist/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "build": "tsc",
     "test": "jest -i --colors --verbose --detectOpenHandles",
     "test:watch": "jest -i --watchAll",
@@ -21,9 +21,15 @@
   "dependencies": {
     "@prisma/client": "^4.12.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.1.5",
     "http-status": "^1.6.2",
+    "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
@@ -36,6 +42,8 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/http-status": "^1.1.2",
     "@types/jest": "^29.5.0",
