Fix bugs and update .env variables for improved configuration

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,45 @@
-# Port number
-PORT=3000
+# GENERAL
 
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# Port number for the server
+PORT=3000
+# Database URL or connection string
 DATABASE_URL="mongodb://janedoe:mypassword@localhost:5432/mydb?schema=sample"
 
-# JWT secret
-JWT_SECRET=thisisasamplesecret
+# JWT
+
+# Secret key used to sign the JWT
+JWT_SECRET=sampleSecret
+# Expiration time for access token
 JWT_ACCESS_EXPIRATION_MINUTES=30
+# Expiration time for refresh token
 JWT_REFRESH_EXPIRATION_DAYS=30
+# Expiration time for reset password token
 JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
+# Expiration time for verify email token
 JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 
-# Google auth
+# GOOGLE
+
+# Client ID (from Google Developer Console)
 GOOGLE_CLIENT_ID=sample_client_id
+# Client secret (from Google Developer Console)
 GOOGLE_CLIENT_SECRET=sample_client_secret
+# Redirect url after successful login
+GOOGLE_REDIRECT_URL=http://frontend.app/google
 
-# SMTP server
+# SMTP
+
+# Hostname from your email provider
 SMTP_HOST=email-server-host
+# Port number from your email provider
 SMTP_PORT=587
+# Username from your email provider
 SMTP_USERNAME=email-server-username
+# Password from your email provider
 SMTP_PASSWORD=email-server-password
+# Email address to send emails from
 EMAIL_FROM=no-reply@app.com
-
+# URL to redirect user after clicking on the verify email link
+EMAIL_VERIFICATION_URL=http://frontend.app/verify-email
+# URL to redirect user after clicking on the reset password link
+PASSWORD_RESET_URL=http://frontend.app/reset-password
