--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "build": "tsc",
-    "test": "jest -i --watchAll --detectOpenHandles",
+    "test": "jest",
     "test:watch": "jest -i --watchAll",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
