--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
@@ -28,7 +29,6 @@
     "http-status": "^1.6.2",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
