--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "supertest": "^6.3.3",
